--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ services:
   users_api:
     build: 
       context: .
+    image: kanto/users_api
     container_name: users_api
     ports:
-      - 8000:8000
+      - 8080:8080
+
+  
+    
